--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>GinnyShinResume</title>
+	<title>김민주 멍청이</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
 		.container {width:1300px; margin:0 auto;}
@@ -34,11 +34,11 @@
 
 <div class="container">
 <div class="about">
-	<h1>Ginny Shin</h1>
+	<h1>김민주는</h1>
 	<p>
 	<a href="https://www.behance.net/ginnyshin" target="_blank">
 	<img src="index.jpg"></p></a>
-	<h4>김민주 멍청이</h4><br><br>
+	<h4>멍청이</h4><br><br>
 
 	
 	
