--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>김민주 멍청이</title>
+	<title>디는 바보</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
 		.container {width:1300px; margin:0 auto;}
@@ -42,71 +42,6 @@
 
 	
 	
-</div>
-
-
-<div class="therest">
-	<h2>Education</h4>
-	<h4><b>Maryland Institute College of Art</b><br>
-		<em>2014 &mdash; present</em><br>
-		BFA Candidate in Graphic Design<br>
-		Expected Graduation 2018</h4><br>
-
-	<h2>Experience</h2>
-	<h4>
-		<b>Maryland Institute College of Art &mdash; Office of Diversity</b><br>
-		<em>2016 &mdash; present</em><br>
-		Program manager<br>
-		International identity program manager, organize campus events and plans with other program managers that represent different identities<br><br>
-
-		<b>MICA Design League</b><br>
-		<em>2015 &mdash; present</em><br>
-		Club Leader<br>
-		organize club events with other leaders such as book fairs in NYC, graphic design lectures and presentations given by guest speakers, making zines and participating PMF, and many other events related to graphic design
-
-	<br><br>
-
-		<b>Maryland Institute College of Art &mdash; Student Affairs</b><br>
-		<em>2015</em><br>
-		Orientation Leader
-	<br>
-		Facilitated orientation for incoming foundation and transfer students<br><br>
-
-		<b>Maryland Institute College of Art &mdash; Admissions</b><br>
-		<em>2015</em><br>
-		Tour Guide<br>
-		Gave tours to families and students who are interested in coming to MICA<br><br><br>
-
-
-	<h2>Skills</h2>
-	</h4>
-		data visualization<br>
-		branding<br>
-		typography<br>
-		web design<br>
-		html/css<br>
-		hand lettering<br>
-		illustration<br>
-		screenprinting<br><br><br>
-
-
-
-
-
-
-	<h2>Exhibition</h2>
-	<h4><b>Sweet 16+5</b><br>
-		MICA Bronze Gallery, Baltimore, MD<br><br>
-
-		<b>Parents' Week Selected Exhibition</b><br>
-		MICA Main Building, Baltimore, MD</h4><br>
-
-
-			<h2>Language Skills</h2>
-	<h4><b>Bilingual</b><br>
-	Korean/English</h4><br>
-
-</body>
 </div>
 </div>
 
