--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="about">
 	<h1>김민주는</h1>
 	<p>
-	<a href="https://www.behance.net/ginnyshin" target="_blank">
+	<a href="https://ginnyshine.com" target="_blank">
 	<img src="index.jpg"></p></a>
 	<h4>멍청이</h4><br><br>
 
