--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
 
 	</style>
 	<link rel="stylesheet" href="print.css" media="print" />
+	
+<link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAARCAYAAAA7bUf6AAAACXBIWXMAAAsTAAALEwEAmpwYAAAA
+GXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAlVJREFUeNqkUktoE1EUPUmnaT42
+TZukpCbCoIWWNtWIKF0IplgQRU1A3Eo2gqiQhUtdJEtRIQsJiBRF3IiCzUaKqCQLP20DTjbBijVj
+bYeapO3k2+ZT47wnGZy2ZqEH3sw799537n33XRX/5KoPAFn/Co6RPqy0jhH2IbmE0SF7yxP5UgX5
+cgUOq1G2qZub0NMZLK8U8XL2a0uRZ7FPmFtYVcTJIkOsBZF4GlzRjgdJM67c/0izNrMTTuzz1d2Y
+eM0rhGURZ78DI4eP4u37GYRCIRw/dQ6P32WpL/wmjbPnLyAYDGJRWEb/oFNxbVlkMp7BsHM/EokE
+crkcIpEIhIKK+soNHcLhMN3HYjGcPO1BhMttF/meKUAQBEWZ+wZHkOSzGBs/QcWbsNlsKNXbt4t0
+63VwuVyyw2Qy/e6H9BJk7/F4FD7V5k+ZM/r0uq0rlYe1poLb7Ybf7wfHcQgEApi4dxejY3bceTVF
+uSiKNBER6V0poG+6jtUB0y6mZ070tlU24dXUEbp9izaVgOd51IuksXuQXZwHy7KIRqPUF7hxHb5O
+BppCDZbk2oCqcdHbaJYVSEtP6jpCs00+eohrZ3phNHRAWKvi5vMUfJcug4vPgl34DJ+2Ll9HIUJn
+uFSFKLXKbWDwbdwh27tepMCp9dJ418AyygFktk6ky6Ch/2pnu8KuN+vhlsrfCep1s3Z6J0dur7El
+b6LUp19Spw9apkhAXdsmV5A5YEbZqlMEE/7jkBUb3R2Uk3hyLjvc84VeR5SI+JdMf4IIbEhCW0FE
+ovg/8L8EGAAYhd4+Z3LdLQAAAABJRU5ErkJggg==" rel="icon" type="image/x-icon" />
+
+
 
 </head>
 
@@ -39,7 +55,7 @@
 	<a href="https://ginnyshine.com" target="_blank">
 	<img src="index.jpg"></p></a>
 	<h4>멍청이</h4><br><br>
-
+</body>
 	
 	
 </div>
