--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>디는 바보</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
+		.projects {width:100px;}
 		.container {width:1300px; margin:0 auto;}
 		.about {font-family: sans-serif; font-style:normal; float:left;}
 		.therest {font-family: sans-serif; font-style: normal; float:right;} 
@@ -39,6 +40,9 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
+	
+<div class="projects">
+	<a href="/projects.html">projects</a>
 
 <div class="container">
 <div class="about">
