--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ QCJgZGQUAFIFTEBCAYgPAAUMyDDgABA7MEHF+EkxCMkAfRCfCUmOKIPQDUA3hKBB2AzAZghOg3AZ
 gMsQDIPwGYDPEGSDHPAZAAIsBCICZNB+QrHFxEAFMGrIYDaEBZqQKAEPAAIMADnpFk8a2jUHAAAA
 AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 
-
+<div data-configid="23740808/37942760" style="width:525px; height:263px;" class="issuuembed"></div>
+<script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
 
 </head>
 
