--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 
 <div class="container">
 <div class="about">
-	<img src="website_orange.jpg">
+	<img src="index.jpg">
 	<p>
 	<a href="https://ginnyshine.com" target="_blank">
 	<img src="index.jpg"></p></a>
