--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name='viewport' content="width=device-width" />
 	<style>
 		.projects {width:100px;}
-		.container {width:400px; margin:0 auto;}
+		.container {width:400px; margin:center;}
 		.therest {font-family: sans-serif; font-style: normal; float:right;} 
 		h4 {font-weight:normal;}
 		h1 {font-family:impact}
@@ -44,8 +44,8 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 	<img src="index.jpg">
 	<p>
 	<a href="https://ginnyshine.com" target="_blank">
-	<img src="index.jpg"></p></a>
-	<h4>멍청이</h4><br><br>
+	</p></a>
+	<h4>postcards</h4><br><br>
 </body>
 	
 	
