--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name='viewport' content="width=device-width" />
 	<style>
 		.projects {width:100px;}
-		.container {width:400px; margin:center;}
+		.container {width:400px; float:center;}
 		.therest {font-family: sans-serif; font-style: normal; float:right;} 
 		h4 {font-weight:normal;}
 		h1 {font-family:impact}
