--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <html>
 <head>
-	<title>디는 바보</title>
+	<title>Ginny Shine</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
-		.projects {width:100px;}
-		.container {width:400px; float:center;}
-		.therest {font-family: sans-serif; font-style: normal; float:right;} 
+		.Ginny {padding-top:10 padding-left:10;}
+		.container {width:400px; padding-top:100; margin:auto;}
 		h4 {font-weight:normal;}
 		h1 {font-family:impact}
 		h2 {font-family:impact;}
 		.prof {float:left;}
 		em {font-style:bold;}
 		.about h1 {text-align:center;}
-		.about h4 {text-align:center;}
+		.container h4 {text-align:center;}
 		/* ----- Media Styles -----*/
 		@media screen and (max-width: 900px) {
 			.therest {float:none; width:auto; margin:0; position:static; height:auto;}
@@ -36,15 +35,14 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
+
+<div class="Ginny Shin">
+	<h1>Ginny Shin</h1>
 	
-<div class="projects">
-	<a href="/projects.html">projects</a>
 
 <div class="container">
-	<img src="index.jpg">
 	<p>
-	<a href="https://ginnyshine.com" target="_blank">
-	</p></a>
+	<a href="orange.html"><img src="orange.jpg"></p></a>
 	<h4>postcards</h4><br><br>
 </body>
 	
