--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 
 <div class="container">
 	<p>
-	<a href="orange.html"><img src="orange.jpg"></p></a>
+	<a href="index.html"><img src="index.jpg"></p></a>
 	<h4>postcards</h4><br><br>
 </body>
 	
