--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 	
 
 <div class="container">
-	<p>
-	<a href="index.html"><img src="index.jpg"></p></a>
-	<h4>postcards</h4><br><br>
+	<img src="index.jpg">
+	<h2>postcards</h2><br><br>
 </body>
 	
 	
