--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<title>Ginny Shine</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
-		.Ginny {padding-top:10 padding-left:10;}
+		.Ginny {padding-top:10 padding-left:20;}
 		.container {width:400px; padding-top:100; margin:auto;}
-		h4 {font-weight:normal;}
+		h4 {font-weight:normal; font-style:sans-serif;}
 		h1 {font-family:impact}
 		h2 {font-family:impact;}
 		.prof {float:left;}
@@ -41,8 +41,8 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 	
 
 <div class="container">
-	<img src="index.jpg">
-	<h2>postcards</h2><br><br>
+	<p></p><a href="index.html"><img src="index.jpg"></p></a>
+	<h4>postcards</42><br><br>
 </body>
 	
 	
