--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<title>Ginny Shine</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
-		.Ginny {padding-top:10 padding-left:20;}
+		.Ginny {padding-top:10 padding-left:100;}
 		.container {width:400px; padding-top:100; margin:auto;}
-		h4 {font-weight:normal; font-style:sans-serif;}
+		h4 {font-weight:normal; font-family:sans-serif;}
 		h1 {font-family:impact}
 		h2 {font-family:impact;}
 		.prof {float:left;}
