--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name='viewport' content="width=device-width" />
 	<style>
 		.Ginny {padding-top:10 padding-left:100;}
-		.container {width:400px; padding-top:100; margin:auto;}
+		.container {width:400px; margin-left: 10px; margin:auto;}
 		h4 {font-weight:normal; font-family:sans-serif;}
 		h1 {font-family:impact}
 		h2 {font-family:impact;}
