--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Ginny Shine</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
-		.Ginny {padding-top:10 ;}
+		.Ginny {padding-top:10 padding-left:10;}
 		.container {width:400px; margin:auto;}
 		h4 {font-weight:normal; font-family:sans-serif;}
 		h1 {font-family:impact}
