--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<title>Ginny Shine</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
-		.Ginny {padding-top:1 padding-left:10;}
-		.container {width:400px; margin:auto;}
+		.Ginny {padding: 10 10 10 10;}
+		.container {width:400px; padding-top:50 margin:auto;}
 		h4 {font-weight:normal; font-family:sans-serif;}
 		h1 {font-family:impact}
 		h2 {font-family:impact;}
