--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Ginny Shine</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
-		.Ginny {padding:1px 1px 1px 1px;}
+		.Ginny {padding:0px;}
 		.container {width:400px; margin:auto; padding-top: 100px;}
 		h4 {font-weight:normal; font-family:sans-serif;}
 		h1 {font-family:impact}
