--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 <div class="container">
 	<p></p><a href="index.html"><img src="index.jpg"></p></a>
 	<h4>postcards</42><br><br>
+	<p></p><a href="index.html"><img src="face.jpg"></p></a>
+	<h4>portraits</42><br><br>
 </body>
 	
 	
