--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 		<meta name='viewport' content="width=device-width" />
 	<style>
 		.Ginny {padding:0px;}
-		.container {width:1400px; margin:auto; padding-top: 100px;}
+		.container {width:1400px; padding-top: 100px;}
 		h4 {font-weight:normal; font-family:sans-serif;}
 		h1 {font-family:impact}
 		h2 {font-family:impact;}
-		.prof {float:left;}
 		em {font-style:bold;}
 		.about h1 {text-align:center;}
 		.container h4 {text-align:center;}
