--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name='viewport' content="width=device-width" />
 	<style>
 		.Ginny {padding:0px;}
-		.container {width:1400px; padding-top: 100px;}
+		.container {width:1400px; margin:auto; padding-top: 100px;}
 		h4 {font-weight:normal; font-family:sans-serif;}
 		h1 {font-family:impact}
 		h2 {font-family:impact;}
@@ -42,7 +42,6 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 <div class="container">
 	<p></p><a href="index.html"><img src="index.jpg"></p></a>
 	<p></p><a href="index.html"><img src="face.jpg"></p></a>
-	<h4>portraits</42><br><br>
 </body>
 	
 	
