--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 	
 
 <div class="container">
-	<p></p><a href="index.html"><img src="index.jpg"></p></a>
-	<p></p><a href="index.html"><img src="face.jpg"></p></a>
+	<p></p><a href="index.html"><img src="index.jpg"></p></a> <p></p><a href="index.html"><img src="face.jpg"></p></a>
 </body>
 	
 	
