--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 	
 
 <div class="container">
-	<p></p><a href="index.html"><img src="index.jpg"></p></a> <p></p><a href="index.html"><img src="face.jpg"></p></a>
+	<div id="photo"><a href="index.html"><img src="index.jpg"></a>
+	</div>
+	<div id="photo"><a href="index.html"><img src="face.jpg"></a>
+	</div>
 </body>
 	
 	
