--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 	
 
 <div class="container">
-	<div id="photo"><a href="index.html"><img src="index.jpg"></a>
-	</div>
-	<div id="photo"><a href="index.html"><img src="face.jpg"></a>
-	</div>
+	<a href="index.html"><img src="index.jpg"></a>
+	<a href="index.html"><img src="face.jpg"></a>
+
+</div>
 </body>
 	
 	
