--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 <div class="container">
 	<a href="index.html"><img src="index.jpg"></a>
 	<a href="index.html"><img src="face.jpg"></a>
+	<a href="index.html"><img src="card.jpg"></a>
 
 </div>
 </body>
