--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 	
 
 <div class="container">
-	<a href="index.html"><img src="index.jpg"></a>
-	<a href="index.html"><img src="face.jpg"></a>
-	<a href="index.html"><img src="card.jpg"></a>
+	<a href="index.html"><img src="index.jpg" hspace="10px"></a>
+	<a href="index.html"><img src="face.jpg" hspace="10px"></a>
+	<a href="index.html"><img src="card.jpg" hspace="10px"></a>
 
 </div>
 </body>
