--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 	<title>Ginny Shine</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
-		.Ginny {padding:0px;}
-		.container {width: 1350px; float:center; padding-top: 100px;}
+		/*---img:hover .text{ opacity: 0.6;}----*/
+		.Ginny {padding: 10px 0px 0px 70px;}
+		.container {width: 1350px; padding-top: 100px; margin-left:60;}
 		h4 {font-weight:normal; font-family:sans-serif;}
 		h1 {font-family:impact}
 		h2 {font-family:impact;}
 		em {font-style:bold;}
-		.about h1 {text-align:center;}
-		.container h4 {text-align:center;}
+	
+		img:hover {opacity:.3;}
+ 
+
 		/* ----- Media Styles -----*/
-		@media screen and (max-width: 900px) {
+		@media screen and (max-width: 900px){}
 			.therest {float:none; width:auto; margin:0; position:static; height:auto;}
 			.about {float:none; width:auto; margin:0; position:static; height:auto;}
 			.container {width:auto;}
@@ -37,16 +40,21 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 
 <div class="Ginny Shin">
 	<h1>Ginny Shin</h1>
-	
+</div>
+
 
 <div class="container">
-	<a href="index.html"><img src="index.jpg" hspace="10px"></a>
-	<a href="index.html"><img src="face.jpg" hspace="10px"></a>
-	<a href="index.html"><img src="card.jpg" hspace="10px"></a>
+	<span class="index">
+	<a href="index.html"><img src="orange.jpg" hspace="10px" class="hover"></a></span>
+	<span class="face">
+		<a href="index.html"><img src="face.jpg" hspace="10px"></a></span>
+	<span class="business card">
+		<a href="index.html"><img src="card.jpg" hspace="10px"></a></span>
+	<span class="water">
+		<a href="index.html"><img src="water.jpg" hspace="10px"></a></span>
 
 </div>
 </body>
-	
 	
 </div>
 </div>
