--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 	<title>Ginny Shine</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
-		/*---img:hover .text{ opacity: 0.6;}----*/
-		.Ginny {padding: 10px 0px 0px 70px;}
-		.container {width: 1350px; padding-top: 100px; margin-left:60;}
+		.Ginny {width:200px; margin:auto; padding:50px;}
+		.container {width:1400px; padding-top: 100px; margin:0 auto;}
 		h4 {font-weight:normal; font-family:sans-serif;}
 		h1 {font-family:impact}
 		h2 {font-family:impact;}
 		em {font-style:bold;}
-	
+		
+		img {}
 		img:hover {opacity:.3;}
  
 
 		/* ----- Media Styles -----*/
 		@media screen and (max-width: 900px){}
-			.therest {float:none; width:auto; margin:0; position:static; height:auto;}
-			.about {float:none; width:auto; margin:0; position:static; height:auto;}
+			.therest {float:none; width:auto; margin:auto; position:static; height:auto;}
+			.about {float:none; width:auto; margin:auto; position:static; height:auto;}
 			.container {width:auto;}
-			.about h1 {text-align:left;}
-			.about h4 {text-align:left;}
 		}
 
 
 	</style>
 	<link rel="stylesheet" href="print.css" media="print" />
+
+	<link rel="stylesheet" href="untitled.css"/>
 	
 <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAARCAYAAAA7bUf6AAAACXBIWXMAAAsTAAALEwEAmpwYAAAA
 GXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAHpJREFUeNpiZGBgSADiC////7/A
@@ -45,13 +45,13 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 
 <div class="container">
 	<span class="index">
-	<a href="index.html"><img src="orange.jpg" hspace="10px" class="hover"></a></span>
+	<a href="index.html"><img src="orange.jpg" class="hover"></a></span>
 	<span class="face">
-		<a href="index.html"><img src="face.jpg" hspace="10px"></a></span>
+		<a href="index.html"><img src="face.jpg" ></a></span>
 	<span class="business card">
-		<a href="index.html"><img src="card.jpg" hspace="10px"></a></span>
+		<a href="index.html"><img src="card.jpg" ></a></span>
 	<span class="water">
-		<a href="index.html"><img src="water.jpg" hspace="10px"></a></span>
+		<a href="index.html"><img src="water.jpg"></a></span>
 
 </div>
 </body>
