--- a/index.html
+++ b/index.html
@@ -4,28 +4,16 @@
 		<meta name='viewport' content="width=device-width" />
 	<style>
 		.Ginny {width:200px; margin:auto; padding:50px;}
-		.container {width:1400px; padding-top: 100px; margin:0 auto;}
+		.container { margin:center; padding:100px;}
 		h4 {font-weight:normal; font-family:sans-serif;}
 		h1 {font-family:impact}
-		h2 {font-family:impact;}
-		em {font-style:bold;}
+
 		
 		img {}
 		img:hover {opacity:.3;}
  
 
-		/* ----- Media Styles -----*/
-		@media screen and (max-width: 900px){}
-			.therest {float:none; width:auto; margin:auto; position:static; height:auto;}
-			.about {float:none; width:auto; margin:auto; position:static; height:auto;}
-			.container {width:auto;}
-		}
-
-
-	</style>
-	<link rel="stylesheet" href="print.css" media="print" />
-
-	<link rel="stylesheet" href="untitled.css"/>
+</style>
 	
 <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAARCAYAAAA7bUf6AAAACXBIWXMAAAsTAAALEwEAmpwYAAAA
 GXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAHpJREFUeNpiZGBgSADiC////7/A
@@ -42,16 +30,14 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 	<h1>Ginny Shin</h1>
 </div>
 
-
 <div class="container">
-	<span class="index">
-	<a href="index.html"><img src="orange.jpg" class="hover"></a></span>
-	<span class="face">
-		<a href="index.html"><img src="face.jpg" ></a></span>
-	<span class="business card">
-		<a href="index.html"><img src="card.jpg" ></a></span>
-	<span class="water">
-		<a href="index.html"><img src="water.jpg"></a></span>
+	<a href="index.html"><img src="orange.jpg"></a>
+
+	<a href="index.html"><img src="face.jpg" ></a>
+
+	<a href="index.html"><img src="card.jpg" ></a>
+
+	<a href="index.html"><img src="water.jpg"></a>
 
 </div>
 </body>
