--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 	<title>Ginny Shine</title>
 		<meta name='viewport' content="width=device-width" />
 	<style>
-		.Ginny {width:200px; margin:auto; padding:50px;}
-		.container { margin:center; padding:100px;}
-		h4 {font-weight:normal; font-family:sans-serif;}
-		h1 {font-family:impact}
-
-		
-		img {}
-		img:hover {opacity:.3;}
+		.whole {width:1350;}
+		.Ginny {width:100%; padding-left:90px; padding-top:20px;}
+		.container {padding:100px; padding-top:150px;}
+		.container img:hover {opacity:.3;}
+		.resume {text-align:right; margin-right:140px; float:right; font-family:sans-serif; font-size:20px;}
+		a {text-decoration: none;color: black;}
  
 
 </style>
@@ -26,8 +24,16 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 
 <body>
 
+<div class="whole thing">
+
 <div class="Ginny Shin">
-	<h1>Ginny Shin</h1>
+	<a href="index.html"> <img src="ginshin.jpg"></a>
+
+<span class="resume">	
+<a href="resume.pdf" style="text-decoration:none">resume</a>
+</span>
+
+</div>
 </div>
 
 <div class="container">
@@ -39,6 +45,7 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 
 	<a href="index.html"><img src="water.jpg"></a>
 
+</div>
 </div>
 </body>
 	
