--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta name='viewport' content="width=device-width" />
 	<style>
 		.whole {width:1350;}
+		.cursor {cursor: url('cursor.png'), auto;	}
 		.Ginny {width:100%; padding-left:90px; padding-top:20px;}
 		.container {padding:100px; padding-top:150px;}
 		.container img:hover {opacity:.3;}
@@ -20,9 +21,14 @@ gMsQDIPwGYDPEGSDHPAZAAIsBCICZNB+QrHFxEAFMGrIYDaEBZqQKAEPAAIMADnpFk8a2jUHAAAA
 AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 
 
+
+
 </head>
 
 <body>
+
+
+<div class="cursor">
 
 <div class="whole thing">
 
@@ -45,6 +51,7 @@ AElFTkSuQmCC" rel="icon" type="image/x-icon" />
 
 	<a href="index.html"><img src="water.jpg"></a>
 
+</div>
 </div>
 </div>
 </body>
